# blob_registry

./: .clang-format  .gitignore  CMakeLists.txt
source/: blob.S  blob_manifest.h  blob_registry.h  test_main.cc
